--- a/main.ui
+++ b/main.ui
@@ -19,25 +19,25 @@
      <rect>
       <x>70</x>
       <y>10</y>
-      <width>591</width>
+      <width>251</width>
       <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>Виды и свойства информации</string>
+     <string>Виды и свойства информации (Тест 1)</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>60</y>
-      <width>591</width>
+      <x>390</x>
+      <y>10</y>
+      <width>251</width>
       <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string>Виды и свойства информации (Тест 2)</string>
     </property>
    </widget>
    <widget class="QScrollBar" name="verticalScrollBar">
@@ -67,22 +67,5 @@
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources/>
- <connections>
-  <connection>
-   <sender>pushButton</sender>
-   <signal>clicked()</signal>
-   <receiver>MainWindow</receiver>
-   <slot>close()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>365</x>
-     <y>46</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>399</x>
-     <y>299</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
