--- a/task2.ui
+++ b/task2.ui
@@ -17,8 +17,8 @@
    <widget class="QComboBox" name="comboBox">
     <property name="geometry">
      <rect>
-      <x>560</x>
-      <y>30</y>
+      <x>570</x>
+      <y>90</y>
       <width>251</width>
       <height>31</height>
      </rect>
@@ -47,10 +47,10 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>10</y>
+      <x>10</x>
+      <y>90</y>
       <width>551</width>
-      <height>71</height>
+      <height>41</height>
      </rect>
     </property>
     <property name="toolTip">
@@ -63,10 +63,10 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>80</y>
+      <x>10</x>
+      <y>170</y>
       <width>521</width>
-      <height>71</height>
+      <height>51</height>
      </rect>
     </property>
     <property name="text">
@@ -77,8 +77,8 @@
    <widget class="QComboBox" name="comboBox_2">
     <property name="geometry">
      <rect>
-      <x>520</x>
-      <y>100</y>
+      <x>530</x>
+      <y>180</y>
       <width>251</width>
       <height>31</height>
      </rect>
@@ -107,8 +107,8 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>180</y>
+      <x>10</x>
+      <y>260</y>
       <width>581</width>
       <height>31</height>
      </rect>
@@ -121,8 +121,8 @@
    <widget class="QComboBox" name="comboBox_4">
     <property name="geometry">
      <rect>
-      <x>580</x>
-      <y>180</y>
+      <x>600</x>
+      <y>260</y>
       <width>231</width>
       <height>31</height>
      </rect>
@@ -151,8 +151,8 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>260</y>
+      <x>10</x>
+      <y>320</y>
       <width>491</width>
       <height>41</height>
      </rect>
@@ -165,8 +165,8 @@
    <widget class="QComboBox" name="comboBox_3">
     <property name="geometry">
      <rect>
-      <x>460</x>
-      <y>260</y>
+      <x>480</x>
+      <y>330</y>
       <width>231</width>
       <height>31</height>
      </rect>
@@ -195,8 +195,8 @@
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>330</y>
+      <x>10</x>
+      <y>400</y>
       <width>401</width>
       <height>31</height>
      </rect>
@@ -208,9 +208,9 @@
    <widget class="QComboBox" name="comboBox_5">
     <property name="geometry">
      <rect>
-      <x>410</x>
-      <y>330</y>
-      <width>271</width>
+      <x>430</x>
+      <y>400</y>
+      <width>251</width>
       <height>31</height>
      </rect>
     </property>
@@ -238,29 +238,96 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>440</y>
+      <x>110</x>
+      <y>460</y>
       <width>191</width>
       <height>61</height>
      </rect>
     </property>
+    <property name="minimumSize">
+     <size>
+      <width>191</width>
+      <height>0</height>
+     </size>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>191</width>
+      <height>16777215</height>
+     </size>
+    </property>
+    <property name="toolTip">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:20pt;&quot;&gt;Ответ&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+    <property name="whatsThis">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:20pt;&quot;&gt;Ответ&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
     <property name="text">
      <string>Ответ</string>
+    </property>
+    <property name="checkable">
+     <bool>false</bool>
+    </property>
+    <property name="checked">
+     <bool>false</bool>
     </property>
    </widget>
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>330</x>
-      <y>420</y>
-      <width>271</width>
-      <height>81</height>
+      <x>350</x>
+      <y>450</y>
+      <width>261</width>
+      <height>71</height>
      </rect>
     </property>
     <property name="text">
-     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:14pt;&quot;&gt;Ответ&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:18pt;&quot;&gt;Результат&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
+   <widget class="QLabel" name="label_7">
+    <property name="geometry">
+     <rect>
+      <x>340</x>
+      <y>0</y>
+      <width>191</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:18pt;&quot;&gt;Проверь себя!&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_8">
+    <property name="geometry">
+     <rect>
+      <x>320</x>
+      <y>50</y>
+      <width>241</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:14pt;&quot;&gt;Выбери 1 из 4 ответов&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_2">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>10</y>
+      <width>101</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Назад</string>
+    </property>
+   </widget>
+   <zorder>pushButton</zorder>
    <zorder>label_2</zorder>
    <zorder>comboBox</zorder>
    <zorder>label</zorder>
@@ -271,8 +338,10 @@
    <zorder>comboBox_3</zorder>
    <zorder>label_5</zorder>
    <zorder>comboBox_5</zorder>
-   <zorder>pushButton</zorder>
    <zorder>label_6</zorder>
+   <zorder>label_7</zorder>
+   <zorder>label_8</zorder>
+   <zorder>pushButton_2</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
